@@ -281,6 +281,7 @@ The following extensions are migrated into MediaWiki 1.14:
 * (bug 13701) {{NUMBEROFVIEWS}} magic word to show number of total views.
 * (bug 5101) Image from Commons doesn't show up when searched in Wikipedia search box
 * (bug 14609) User's namespaces to be searched default not updated after adding new namespace
+* Purge form uses valid XHTML and (bug 8992) uses $wgRequest instead of $_SERVER
 
 === API changes in 1.14 ===
 
